fix icon invisible on Safari

--- a/components/drafts/draft_actions/action.scss
+++ b/components/drafts/draft_actions/action.scss
@@ -26,6 +26,11 @@
         width: 18px;
         height: 18px;
         margin-top: 2px;
+
+        // (X _ X)
+        // fix Safari invisible icon bug
+        align-items: initial;
+        justify-content: initial;
     }
 
     .DraftAction__button--delete {
